@startuml Class Diagram

package "Class Diagram - Clientes Gestor" {

TelefonesController -- TelefonesView
TelefonesController -- Telefones

AddressController -- AddressView
AddressController -- Address

class AddressController {
    -model: Address
    -view: AddressView
    +list()
    +new()
    +save()
    +remove()
}

class TelefonesController {
    -model: Address
    -view: TelefonesView
    +novo()
    +cadastrar()
    +apagar()
}

class Address {
    -id : Int
    -cpf : String
    -address_category : String
    -type : String
    -name : String
    -number : String
    -district : String
    -city : String
    -state : String
    -zip_code : String
    -complement : String
    +post_address_list()
    +post_address_delete()
    +post_address_new()
}

class Telefones {
    -id : Int
    -cpf : String
    -tipo : String
    -telefone : String
    +telefone_list()
    +telefone_delete()
    +telefone_insert()
}

class AddressView {
}

@enduml